# utah

./: CMakeLists.txt  README.md
proj1/: CMakeLists.txt
proj1/src/: main.cpp  scene.h  sphere.cpp  sphere.h  xmlload.cpp  xmlload.h
proj2/: CMakeLists.txt
proj2/src/: lights.h  main.cpp  sphere.cpp  xmlload.cpp  xmlload.h
proj3/: CMakeLists.txt
proj3/src/: lights.h  main.cpp  materials.h  render.cpp  render.h  scene.h  sphere.cpp  sphere.h
proj4/: CMakeLists.txt
proj4/src/: lights.h  main.cpp  materials.h  render.cpp  render.h  sphere.cpp  xmlload.cpp  xmlload.h
proj5/: CMakeLists.txt  box.xml
proj5/src/: main.cpp  materials.h  objects.cpp  objects.h  render.cpp  render.h  scene.h
proj6/: CMakeLists.txt  box.xml
proj6/src/: main.cpp  objects.h  xmlload.cpp  xmlload.h
proj7/: CMakeLists.txt  scene.xml
proj7/src/: lights.h  main.cpp  materials.cpp  materials.h  objects.cpp  objects.h  render.h  scene.h  texture.cpp  texture.h  xmlload.cpp  xmlload.h
